<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.cognito.homeautomation.View.AddDevice">

    <Button
        android:id="@+id/btnSave"
        android:layout_width="343dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/mybutton"
        android:text="@string/confirm"
        android:textColor="@color/text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="343dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/mybutton"
        android:text="@string/rmv"
        android:textColor="@color/text_color"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave" />

    <EditText
        android:id="@+id/edtLocale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/text_color"
        android:backgroundTint="@color/text_color"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/edtName"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/text_color"
        android:backgroundTint="@color/text_color"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="82dp"
        android:layout_height="33dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/text_color"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtName"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtName"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteX="4dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="82dp"
        android:layout_height="35dp"
        android:textColor="@color/text_color"
        android:text="@string/locale"
        app:layout_constraintTop_toTopOf="@+id/edtLocale"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtLocale"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="4dp" />

</android.support.constraint.ConstraintLayout>
