<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cognito.homeautomation.View.MainActivity"
    android:background="@color/background_color">

    <EditText
        android:id="@+id/edtLoginPass"
        android:layout_width="302dp"
        android:layout_height="54dp"
        android:layout_marginTop="38dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/Senha"
        android:textColor="@color/text_color"
        android:inputType="textPassword"
        android:textColorHint="?attr/colorButtonNormal"
        app:layout_constraintTop_toBottomOf="@+id/edtLoginUser"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edtLoginUser"
        android:layout_width="304dp"
        android:layout_height="61dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/Nome"
        android:textColor="?android:attr/colorButtonNormal"
        android:textColorHint="?attr/colorButtonNormal"
        android:inputType="text"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="128dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="343dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/mybutton"
        android:text="@string/signup"
        android:textColor="@color/text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="343dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/mybutton"
        android:text="@string/login"
        android:textColor="@color/text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLoginPass"
        app:layout_constraintHorizontal_bias="0.52" />

    <ImageView
        android:id="@+id/imgHum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_user"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/edtLoginUser"
        android:layout_marginRight="8dp"
        android:textColor="@color/text_color"
        app:layout_constraintRight_toRightOf="@+id/edtLoginUser"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="@+id/edtLoginUser"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtLoginUser"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_pass"
        android:layout_marginLeft="8dp"
        android:textColor="@color/text_color"
        app:layout_constraintLeft_toLeftOf="@+id/edtLoginPass"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/edtLoginPass"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="@+id/edtLoginPass"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtLoginPass"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
