<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.cognito.homeautomation.View.OutletSettings">

    <Button
        android:id="@+id/btnHistogram"
        android:layout_width="343dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/mybutton"
        android:text="Histograma"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnScheulde"
        android:layout_width="343dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/mybutton"
        android:text="Gerenciar Tarefas"
        android:textColor="@color/text_color"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnHistogram"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.987" />

    <ImageButton
        android:id="@+id/imgbPlug3"
        android:contentDescription="@string/btn1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:adjustViewBounds="true"
        android:layout_marginRight="101dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtPlug3Name" />

    <ImageButton
        android:id="@+id/imgbPlug1"
        android:contentDescription="@string/btn2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:layout_marginLeft="107dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtPlug1Name" />

    <ImageButton
        android:id="@+id/imgbPlug2"
        android:contentDescription="@string/btn3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="195dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtPlug2Name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtSetName"
        android:layout_width="213dp"
        android:layout_height="38dp"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textColor="@color/text_color"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.476">
    </EditText>

    <EditText
        android:id="@+id/edtPlug1Name"
        android:layout_width="112dp"
        android:layout_height="26dp"
        android:textSize="16dp"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:background="@android:color/transparent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/edtSetLocale"
        android:layout_marginLeft="79dp"
        app:layout_constraintLeft_toLeftOf="parent">
    </EditText>

    <EditText
        android:id="@+id/edtPlug2Name"
        android:layout_width="112dp"
        android:layout_height="26dp"
        android:textSize="16dp"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:background="@android:color/transparent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/imgbPlug3"></EditText>

    <EditText
        android:id="@+id/edtPlug3Name"
        android:layout_width="112dp"
        android:layout_height="26dp"
        android:textAlignment="center"
        android:textSize="16dp"
        android:textColor="@color/text_color"
        android:background="@android:color/transparent"
        android:layout_marginRight="66dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/edtSetLocale"
        app:layout_constraintLeft_toRightOf="@+id/edtPlug1Name"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.735"></EditText>

    <EditText
        android:id="@+id/edtSetLocale"
        android:layout_width="157dp"
        android:layout_height="27dp"
        android:textSize="18dp"
        android:textColor="@color/text_color"
        android:textAlignment="center"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/edtSetName"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"></EditText>

    <TextView
        android:id="@+id/txtNext"
        android:layout_width="156dp"
        android:layout_height="47dp"
        android:text="Próxima tarefa agendada :"
        android:textColor="@android:color/darker_gray"
        android:textSize="18dp"
        android:textAlignment="center"
        android:layout_marginLeft="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="155dp" />

    <TextView
        android:id="@+id/txtData"
        android:layout_width="124dp"
        android:layout_height="47dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:text="hh:mm:ss.s dd/mm"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="18dp"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintLeft_toRightOf="@+id/txtNext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="154dp" />

    <ImageButton
        android:id="@+id/imgconn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="311dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/txtRemote"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_disconnected" />

    <TextView
        android:id="@+id/txtSetTemp"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="18dp"
        android:gravity="center_vertical|left"
        app:layout_constraintLeft_toRightOf="@+id/imgTemp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/txtNext" />

    <ImageView
        android:id="@+id/imgTemp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/temp"
        app:srcCompat="@drawable/ic_temp_40"
        app:layout_constraintTop_toBottomOf="@+id/imgbPlug2"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/txtNext"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="67dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtSetEnergy"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:gravity="center_vertical|left"
        android:textColor="@android:color/darker_gray"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/imgbPlug2"
        app:layout_constraintLeft_toRightOf="@+id/imgEnergy"
        android:layout_marginTop="28dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txtData"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgEnergy"
        android:contentDescription="@string/watts"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_energy_40"
        app:layout_constraintTop_toBottomOf="@+id/imgbPlug2"
        android:layout_marginTop="28dp"
        app:layout_constraintLeft_toRightOf="@+id/txtSetTemp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txtData"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
